# capsule-agents

./: .dockerignore  .gitignore  .releaserc.json  CLAUDE.md  Dockerfile  LICENSE  README.md  VERCEL_AI_REFACTOR.md  deno.json  dockerfile  example.agent.config.json  example.agent.config.yaml  log_conf.yaml  typecheck-backend.sh
.claude/: settings.json
.claude/commands/: pr-ready.md
.github/scripts/: check-next-changes.js  create-weekly-release-pr.js
.github/workflows/: pr-quality.yml  publish-docker-image.yml  release.yml  scheduled-merge.yml
backend/: main.py  pyproject.toml
backend/app/: configure_schemas.py  main.py  schemas.py  test_schema_fix.py
backend/app/dependicies/: auth.py  deps.py
backend/app/routers/: configure.py
backend/app/services/: a2a_tool.py  agent_service.py  configure_service.py  sqlite_session_service.py
backend/app/utils/: error_handler.py  exceptions.py
capsule-agents-backend/: .env.example  deno.json  package-lock.json  package.json  sessions.db-shm  sessions.db-wal  tsconfig.json
capsule-agents-backend/docs/: a2a-request-handler-architecture.md
capsule-agents-backend/src/: index.ts
capsule-agents-frontend/: deno.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
capsule-agents-frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
capy-config-frontend/: index.html  package-lock.json  package.json  vite.config.ts
capy-config-frontend/src/: App.tsx  index.css
frontend/: index.html  next.config.mjs  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
(+174 files in other folders)
