[project]
name = "backend"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-adk>=0.2.0",
    "uvicorn[standard]>=0.20.0",
    "sse-starlette>=0.1.0",
    "google-genai>=1.11.0",
    "litellm>=1.68.1",
    "python-multipart>=0.0.12",
]

[tool.pyright]
typeCheckingMode = "strict"
