[project]
name = "backend"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-adk>=1.6.1",
    "uvicorn[standard]>=0.20.0",
    "sse-starlette>=0.1.0",
    "litellm>=1.74.3",
    "python-multipart>=0.0.12",
    "h11>=0.16.0",
]

[tool.pyright]
typeCheckingMode = "strict"
